# Tennis-Predictor

./: LICENSE  README.md  main.py  pyproject.toml
prediction_tennis/src/dataset/: README.md
prediction_tennis/src/dataset/flashscore/: README.md  main.py
prediction_tennis/src/dataset/flashscore/models/: README.md  matchs.py  odds.py  players.py  tournaments.py
prediction_tennis/src/dataset/flashscore/parsers/: README.md  match_score_parser.py  match_status_parser.py  matchs_in_tournament_parser.py  odds_parser.py  tournament_dates_parser.py  tournament_parser.py  tournaments_parser.py
prediction_tennis/src/dataset/flashscore/preprocessed/: README.md
prediction_tennis/src/dataset/flashscore/raw/: README.md  main.py
prediction_tennis/src/dataset/flashscore/raw/models/: README.md  matchs.py  odds.py  players.py  tournaments.py
prediction_tennis/src/dataset/flashscore/raw/parsers/: match_score_parser.py  match_status_parser.py  matchs_in_tournament_parser.py  odds_parser.py  tournament_dates_parser.py  tournaments_parser.py
prediction_tennis/src/dataset/flashscore/raw/utils/: REAMDE.md  flashscore_client.py
prediction_tennis/src/dataset/flashscore/utils/: REAMDE.md  flashscore_client.py  log_setup.py  text_extraction.py
