[tool.poetry]
name = "prediction-tennis"
version = "0.1.0"
description = ""
authors = ["luc <lucmoulinveillon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.2.0"
requests = "^2.32.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.13.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
